[MD Settings][People] Force sign out only in the case of unrecoverable error

BUG=674000
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2591093002
Cr-Commit-Position: refs/heads/master@{#440410}

Former-commit-id: 2280c8fda1618773a1d572a8abd2663b754cd486