chrome/browser/ui/webui/options/browser_options_handler.cc
@@ -184,6 +184,8 @@ std::string GetSyncErrorAction(sync_ui_util::ActionType action_type) {
   switch (action_type) {
     case sync_ui_util::REAUTHENTICATE:
       return "reauthenticate";
+    case sync_ui_util::SIGNOUT_AND_SIGNIN:
+      return "signOutAndSignIn";
     case sync_ui_util::UPGRADE_CLIENT:
       return "upgradeClient";
     case sync_ui_util::ENTER_PASSPHRASE:
